versioned_docs/version-1.1.x/api/agros-tools/index.md
@agros/tools

# @agros/tools

## Table of contents

### Classes

- [ComponentInstance](classes/ComponentInstance.md)
- [ModuleInstance](classes/ModuleInstance.md)

### Interfaces

- [AddImportedEntityToModuleOptions](interfaces/AddImportedEntityToModuleOptions.md)
- [AddImportedServiceToServiceOptions](interfaces/AddImportedServiceToServiceOptions.md)
- [AddRouteToModuleOptions](interfaces/AddRouteToModuleOptions.md)
- [BootstrapConfigItem](interfaces/BootstrapConfigItem.md)
- [BundlessPlatform](interfaces/BundlessPlatform.md)
- [CodeLocation](interfaces/CodeLocation.md)
- [CollectionDescriptor](interfaces/CollectionDescriptor.md)
- [ComponentDecoratorOptions](interfaces/ComponentDecoratorOptions.md)
- [ComponentInstanceMetadata](interfaces/ComponentInstanceMetadata.md)
- [ComponentScript](interfaces/ComponentScript.md)
- [Container](interfaces/Container.md)
- [ContainerForwardedComponentProps](interfaces/ContainerForwardedComponentProps.md)
- [DynamicModule](interfaces/DynamicModule.md)
- [EnsureImportOptions](interfaces/EnsureImportOptions.md)
- [EnsureImportResult](interfaces/EnsureImportResult.md)
- [EntityDescriptor](interfaces/EntityDescriptor.md)
- [EntryTailCodeData](interfaces/EntryTailCodeData.md)
- [Factory](interfaces/Factory.md)
- [FactoryCode](interfaces/FactoryCode.md)
- [FactoryProvider](interfaces/FactoryProvider.md)
- [GetComponentFactoryCodeData](interfaces/GetComponentFactoryCodeData.md)
- [Interceptor](interfaces/Interceptor.md)
- [ModuleDecoratorOptions](interfaces/ModuleDecoratorOptions.md)
- [ModuleInstanceMetadata](interfaces/ModuleInstanceMetadata.md)
- [ModuleMetadata](interfaces/ModuleMetadata.md)
- [PathDescriptor](interfaces/PathDescriptor.md)
- [Platform](interfaces/Platform.md)
- [PlatformConfig](interfaces/PlatformConfig.md)
- [PlatformFiles](interfaces/PlatformFiles.md)
- [RootContainerProps](interfaces/RootContainerProps.md)
- [RootPointDescriptor](interfaces/RootPointDescriptor.md)
- [RouteOptionItem](interfaces/RouteOptionItem.md)
- [RouteProps](interfaces/RouteProps.md)
- [RouterItem](interfaces/RouterItem.md)
- [UpdateItem](interfaces/UpdateItem.md)
- [ValueProvider](interfaces/ValueProvider.md)

### Type Aliases

- [AddVirtualFile](index.md#addvirtualfile)
- [AsyncModuleClass](index.md#asyncmoduleclass)
- [BaseProvider](index.md#baseprovider)
- [BaseProviderWithValue](index.md#baseproviderwithvalue)
- [CollectionMap](index.md#collectionmap)
- [CollectionType](index.md#collectiontype)
- [ComponentMetadata](index.md#componentmetadata)
- [EnsureImportType](index.md#ensureimporttype)
- [Provider](index.md#provider)
- [ProviderToken](index.md#providertoken)
- [ProviderWithValue](index.md#providerwithvalue)
- [Type](index.md#type)
- [Updater](index.md#updater)
- [UpdaterWithChecker](index.md#updaterwithchecker)
- [UseInterceptorsDecoratorOptions](index.md#useinterceptorsdecoratoroptions)

### Variables

- [HOST\_MODULE](index.md#host_module)
- [PROVIDER\_MODULE](index.md#provider_module)

### Functions

- [isBasicProvider](index.md#isbasicprovider)
- [isClass](index.md#isclass)
- [isDynamicModule](index.md#isdynamicmodule)
- [isFactoryProvider](index.md#isfactoryprovider)
- [isParameterDep](index.md#isparameterdep)
- [isValueProvider](index.md#isvalueprovider)

## Type Aliases

### <a id="addvirtualfile" name="addvirtualfile"></a> AddVirtualFile

Ƭ **AddVirtualFile**: (`pathname`: `string`, `content`: `string`) => `string`

#### Type declaration

▸ (`pathname`, `content`): `string`

##### Parameters

| Name | Type |
| :------ | :------ |
| `pathname` | `string` |
| `content` | `string` |

##### Returns

`string`

#### Defined in

[packages/agros-tools/src/platform.interface.ts:4](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/platform.interface.ts#L4)

___

### <a id="asyncmoduleclass" name="asyncmoduleclass"></a> AsyncModuleClass

Ƭ **AsyncModuleClass**<`T`\>: [`Type`](index.md#type)<`T`\> \| `Promise`<[`Type`](index.md#type)<`T`\>\> \| [`DynamicModule`](interfaces/DynamicModule.md)<`T`\>

#### Type parameters

| Name | Type |
| :------ | :------ |
| `T` | `any` |

#### Defined in

[packages/agros-tools/src/types.ts:59](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/types.ts#L59)

___

### <a id="baseprovider" name="baseprovider"></a> BaseProvider

Ƭ **BaseProvider**: [`ValueProvider`](interfaces/ValueProvider.md) \| [`FactoryProvider`](interfaces/FactoryProvider.md)

#### Defined in

[packages/agros-tools/src/types.ts:61](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/types.ts#L61)

___

### <a id="baseproviderwithvalue" name="baseproviderwithvalue"></a> BaseProviderWithValue

Ƭ **BaseProviderWithValue**<`T`\>: [`BaseProvider`](index.md#baseprovider) & { `value`: `T`  }

#### Type parameters

| Name | Type |
| :------ | :------ |
| `T` | `any` |

#### Defined in

[packages/agros-tools/src/types.ts:64](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/types.ts#L64)

___

### <a id="collectionmap" name="collectionmap"></a> CollectionMap

Ƭ **CollectionMap**: `Record`<`string`, `string`[]\>

#### Defined in

[packages/agros-tools/src/types.ts:11](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/types.ts#L11)

___

### <a id="collectiontype" name="collectiontype"></a> CollectionType

Ƭ **CollectionType**: ``"module"`` \| ``"service"`` \| ``"component"`` \| ``"interceptor"``

#### Defined in

[packages/agros-tools/src/types.ts:12](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/types.ts#L12)

___

### <a id="componentmetadata" name="componentmetadata"></a> ComponentMetadata

Ƭ **ComponentMetadata**: `Omit`<[`ComponentDecoratorOptions`](interfaces/ComponentDecoratorOptions.md), ``"declarations"``\> & { `factory?`: () => `any` ; `uuid`: `string`  }

#### Defined in

[packages/agros-tools/src/types.ts:38](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/types.ts#L38)

___

### <a id="ensureimporttype" name="ensureimporttype"></a> EnsureImportType

Ƭ **EnsureImportType**: ``"named"`` \| ``"default"`` \| ``"namespace"``

#### Defined in

[packages/agros-tools/src/types.ts:171](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/types.ts#L171)

___

### <a id="provider" name="provider"></a> Provider

Ƭ **Provider**<`T`\>: [`Type`](index.md#type)<`T`\> \| [`BaseProvider`](index.md#baseprovider)

#### Type parameters

| Name | Type |
| :------ | :------ |
| `T` | `any` |

#### Defined in

[packages/agros-tools/src/types.ts:62](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/types.ts#L62)

___

### <a id="providertoken" name="providertoken"></a> ProviderToken

Ƭ **ProviderToken**: `string` \| `symbol`

#### Defined in

[packages/agros-tools/src/types.ts:70](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/types.ts#L70)

___

### <a id="providerwithvalue" name="providerwithvalue"></a> ProviderWithValue

Ƭ **ProviderWithValue**<`T`, `V`\>: [`Type`](index.md#type)<`T`\> \| [`BaseProviderWithValue`](index.md#baseproviderwithvalue)<`V`\>

#### Type parameters

| Name | Type |
| :------ | :------ |
| `T` | `any` |
| `V` | `any` |

#### Defined in

[packages/agros-tools/src/types.ts:68](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/types.ts#L68)

___

### <a id="type" name="type"></a> Type

Ƭ **Type**<`T`\>: (...`args`: `any`[]) => `T`

#### Type parameters

| Name | Type |
| :------ | :------ |
| `T` | `any` |

#### Type declaration

• (...`args`)

##### Parameters

| Name | Type |
| :------ | :------ |
| `...args` | `any`[] |

#### Defined in

[packages/agros-tools/src/types.ts:58](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/types.ts#L58)

___

### <a id="updater" name="updater"></a> Updater

Ƭ **Updater**<`T`\>: (`data`: { `classImportItem`: `ClassImportItem`<`t.ClassDeclaration`\> ; `initialResult`: [`UpdateItem`](interfaces/UpdateItem.md)[] ; `options?`: `T` ; `sourceDescriptor`: [`EntityDescriptor`](interfaces/EntityDescriptor.md) ; `targetAST`: `ParseResult`<`t.File`\> ; `targetDescriptor`: [`EntityDescriptor`](interfaces/EntityDescriptor.md)  }) => `Promise`<[`UpdateItem`](interfaces/UpdateItem.md)[]\>

#### Type parameters

| Name |
| :------ |
| `T` |

#### Type declaration

▸ (`data`): `Promise`<[`UpdateItem`](interfaces/UpdateItem.md)[]\>

##### Parameters

| Name | Type |
| :------ | :------ |
| `data` | `Object` |
| `data.classImportItem` | `ClassImportItem`<`t.ClassDeclaration`\> |
| `data.initialResult` | [`UpdateItem`](interfaces/UpdateItem.md)[] |
| `data.options?` | `T` |
| `data.sourceDescriptor` | [`EntityDescriptor`](interfaces/EntityDescriptor.md) |
| `data.targetAST` | `ParseResult`<`t.File`\> |
| `data.targetDescriptor` | [`EntityDescriptor`](interfaces/EntityDescriptor.md) |

##### Returns

`Promise`<[`UpdateItem`](interfaces/UpdateItem.md)[]\>

#### Defined in

[packages/agros-tools/src/types.ts:230](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/types.ts#L230)

___

### <a id="updaterwithchecker" name="updaterwithchecker"></a> UpdaterWithChecker

Ƭ **UpdaterWithChecker**<`T`\>: (`sourceDescriptor`: [`EntityDescriptor`](interfaces/EntityDescriptor.md), `targetDescriptor`: [`EntityDescriptor`](interfaces/EntityDescriptor.md), `options?`: `T`) => `Promise`<[`UpdateItem`](interfaces/UpdateItem.md)[]\>

#### Type parameters

| Name | Type |
| :------ | :------ |
| `T` | `any` |

#### Type declaration

▸ (`sourceDescriptor`, `targetDescriptor`, `options?`): `Promise`<[`UpdateItem`](interfaces/UpdateItem.md)[]\>

##### Parameters

| Name | Type |
| :------ | :------ |
| `sourceDescriptor` | [`EntityDescriptor`](interfaces/EntityDescriptor.md) |
| `targetDescriptor` | [`EntityDescriptor`](interfaces/EntityDescriptor.md) |
| `options?` | `T` |

##### Returns

`Promise`<[`UpdateItem`](interfaces/UpdateItem.md)[]\>

#### Defined in

[packages/agros-tools/src/types.ts:239](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/types.ts#L239)

___

### <a id="useinterceptorsdecoratoroptions" name="useinterceptorsdecoratoroptions"></a> UseInterceptorsDecoratorOptions

Ƭ **UseInterceptorsDecoratorOptions**: [`Type`](index.md#type)[]

#### Defined in

[packages/agros-tools/src/types.ts:157](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/types.ts#L157)

## Variables

### <a id="host_module" name="host_module"></a> HOST\_MODULE

• `Const` **HOST\_MODULE**: ``"HOST_MODULE"``

#### Defined in

[packages/agros-tools/src/constants.ts:2](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/constants.ts#L2)

___

### <a id="provider_module" name="provider_module"></a> PROVIDER\_MODULE

• `Const` **PROVIDER\_MODULE**: ``"PROVIDER_MODULE"``

#### Defined in

[packages/agros-tools/src/constants.ts:1](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/constants.ts#L1)

## Functions

### <a id="isbasicprovider" name="isbasicprovider"></a> isBasicProvider

▸ **isBasicProvider**(`object`): `boolean`

#### Parameters

| Name | Type |
| :------ | :------ |
| `object` | `any` |

#### Returns

`boolean`

#### Defined in

[packages/agros-tools/src/is.ts:14](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/is.ts#L14)

___

### <a id="isclass" name="isclass"></a> isClass

▸ **isClass**(`obj`): `boolean`

#### Parameters

| Name | Type |
| :------ | :------ |
| `obj` | `any` |

#### Returns

`boolean`

#### Defined in

[packages/agros-tools/src/is.ts:1](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/is.ts#L1)

___

### <a id="isdynamicmodule" name="isdynamicmodule"></a> isDynamicModule

▸ **isDynamicModule**(`object`): `boolean`

#### Parameters

| Name | Type |
| :------ | :------ |
| `object` | `any` |

#### Returns

`boolean`

#### Defined in

[packages/agros-tools/src/is.ts:10](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/is.ts#L10)

___

### <a id="isfactoryprovider" name="isfactoryprovider"></a> isFactoryProvider

▸ **isFactoryProvider**(`object`): `boolean`

#### Parameters

| Name | Type |
| :------ | :------ |
| `object` | `any` |

#### Returns

`boolean`

#### Defined in

[packages/agros-tools/src/is.ts:20](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/is.ts#L20)

___

### <a id="isparameterdep" name="isparameterdep"></a> isParameterDep

▸ **isParameterDep**(`object`): `boolean`

#### Parameters

| Name | Type |
| :------ | :------ |
| `object` | `any` |

#### Returns

`boolean`

#### Defined in

[packages/agros-tools/src/is.ts:24](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/is.ts#L24)

___

### <a id="isvalueprovider" name="isvalueprovider"></a> isValueProvider

▸ **isValueProvider**(`object`): `boolean`

#### Parameters

| Name | Type |
| :------ | :------ |
| `object` | `any` |

#### Returns

`boolean`

#### Defined in

[packages/agros-tools/src/is.ts:16](https://github.com/agrosjs/agros/blob/d61174d/packages/agros-tools/src/is.ts#L16)
